--- a/Web/Views/Login/SignIn.cshtml
+++ b/Web/Views/Login/SignIn.cshtml
@@ -65,11 +65,9 @@
     function validateForm() {
         const loginForm = document.getElementById('loginForm');
 
-        loginForm.addEventListener('submit', function (event) {
-            event.preventDefault();
+       
             const email = document.getElementsByName('email')[0].value;
             const password = document.getElementsByName('password')[0].value;
-
             // Відправляємо POST-запит до API для входу
             fetch('https://localhost:7050/api/auth/login', {
                 method: 'POST',
@@ -77,7 +75,7 @@
                     'Content-Type': 'application/json'
                 },
                 body: JSON.stringify({
-                    name: email, //  ім'я користувача може бути email або інше поле для входу
+                    email: email, //  ім'я користувача може бути email або інше поле для входу
                     password: password
                 })
             })
@@ -87,7 +85,7 @@
                         // Вхід успішний, збережіть токен у локальному сховищі
                         localStorage.setItem('token', data.token);
                         // Перенаправте користувача на іншу сторінку або виконайте інші дії
-                        window.location.href = '/login';
+                        window.location.href = '/home';
                     } else {
                         alert('Неправильний логін або пароль');
                     }
@@ -95,7 +93,8 @@
                 .catch(error => {
                     console.error('Помилка входу:', error);
                 });
-        });
+        return false;
+        
     }
 </script>
 </body>
