--- a/style.css
+++ b/style.css
@@ -280,206 +280,7 @@ progress::-webkit-progress-value {
     position: absolute;
     left: 320px;
     top: 16px;
-    overflow: visible;
-}
-.card-s2 {
-    background: #ffffff;
-    border-radius: 14px;
-    padding: 6px;
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-    align-items: flex-start;
-    justify-content: flex-start;
-    width: 360px;
-    height: 100px;
-    position: absolute;
-    left: 0px;
-    top: 224px;
-}
-.icon-favorite2 {
-    flex-shrink: 0;
-    position: absolute;
-    left: 320px;
-    top: 16px;
-    overflow: visible;
-}
-.card-s3 {
-    background:  #ffffff;
-    border-radius: 14px;
-    padding: 6px;
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-    align-items: flex-start;
-    justify-content: flex-start;
-    width: 360px;
-    height: 100px;
-    position: absolute;
-    left: 0px;
-    top: 328px;
-}
-.icon-favorite3 {
-    flex-shrink: 0;
-    position: absolute;
-    left: 320px;
-    top: 16px;
-    overflow: visible;
-}
-.card-s4 {
-    background:  #ffffff;
-    border-radius: 14px;
-    padding: 6px;
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-    align-items: flex-start;
-    justify-content: flex-start;
-    width: 360px;
-    height: 100px;
-    position: absolute;
-    left: 0px;
-    top: 432px;
-}
-.icon-favorite4 {
-    flex-shrink: 0;
-    position: absolute;
-    left: 320px;
-    top: 16px;
-    overflow: visible;
-}
-.card-s5 {
-    background:  #ffffff;
-    border-radius: 14px;
-    padding: 6px;
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-    align-items: flex-start;
-    justify-content: flex-start;
-    width: 360px;
-    height: 100px;
-    position: absolute;
-    left: 0px;
-    top: 536px;
-}
-.icon-favorite5 {
-    flex-shrink: 0;
-    position: absolute;
-    left: 320px;
-    top: 16px;
-    overflow: visible;
-}
-.card-s6 {
-    background: #ffffff;
-    border-radius: 14px;
-    padding: 6px;
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-    align-items: flex-start;
-    justify-content: flex-start;
-    width: 360px;
-    height: 100px;
-    position: absolute;
-    left: 0px;
-    top: 640px;
-}
-.icon-favorite6 {
-    flex-shrink: 0;
-    position: absolute;
-    left: 320px;
-    top: 16px;
-    overflow: visible;
-}
-.card-s7 {
-    background:  #ffffff;
-    border-radius: 14px;
-    padding: 6px;
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-    align-items: flex-start;
-    justify-content: flex-start;
-    width: 360px;
-    height: 100px;
-    position: absolute;
-    left: 0px;
-    top: 744px;
-}
-.icon-favorite7 {
-    flex-shrink: 0;
-    position: absolute;
-    left: 320px;
-    top: 16px;
-    overflow: visible;
-}
-.card-s8 {
-    background: #ffffff;
-    border-radius: 14px;
-    padding: 6px;
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-    align-items: flex-start;
-    justify-content: flex-start;
-    width: 360px;
-    height: 100px;
-    position: absolute;
-    left: 0px;
-    top: 848px;
-}
-.icon-favorite8 {
-    flex-shrink: 0;
-    position: absolute;
-    left: 320px;
-    top: 16px;
-    overflow: visible;
-}
-.card-s9 {
-    background:  #ffffff;
-    border-radius: 14px;
-    padding: 6px;
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-    align-items: flex-start;
-    justify-content: flex-start;
-    width: 360px;
-    height: 100px;
-    position: absolute;
-    left: 0px;
-    top: 952px;
-}
-.icon-favorite9 {
-    flex-shrink: 0;
-    position: absolute;
-    left: 320px;
-    top: 16px;
-    overflow: visible;
-}
-.card-s10 {
-    background:  #ffffff;
-    border-radius: 14px;
-    padding: 6px;
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-    align-items: flex-start;
-    justify-content: flex-start;
-    width: 360px;
-    height: 100px;
-    position: absolute;
-    left: 0px;
-    top: 1056px;
-}
-.icon-favorite10 {
-    flex-shrink: 0;
-    position: absolute;
-    left: 320px;
-    top: 16px;
-    overflow: visible;
-}
+    overflow: visible;}
 .frame-18806 {
     padding: 8px;
     display: flex;
